client/src/App.css
.artistTitle {
    font-family: Verdana, sans-serif;
    font-weight: 900;
    margin-bottom: 85px;
    color: white; 
    font-size: 70pt;
    letter-spacing: -8px;
}

body {
    margin: 0px;
    overscroll-behavior-y: none;
}


.button {
    height: auto;
    width: auto;
    font-family: Verdana, sans-serif;
    background-color: #212121;
    color: white;
    text-decoration: none;
    font-size: 16px;
    height: auto;
    padding: 15px 20px;
    border-radius: 5px;
}

.button:hover {
    background: #373737;
}

.cardBody  {    
    width: 220px; 
    height: 295px;
    cursor: default;
    background: #212121;
    border-radius: 5px;
    margin-bottom: 25px;  
    transition: background 0.2s ease-in-out; 
}

.cardImage {
    height: 190px;
    width: 190px;
    object-fit: cover;
    margin: 15px;
    box-shadow: 0px 4px 10px 2px #121212;
}

.cardImageBox {
    position: relative;
}

.cardPlayButton {
    position: absolute;
    right: 23px;
    bottom: 20px;
    display: flex;
    position: absolute;
    height: 40px;
    width: 40px;
    border-radius: 50%;
    background: #1ed760;
    box-shadow: 0px 5px 6px 2px rgba(0, 0, 0, 0.4);
    visibility: hidden;
    transition: bottom 0.2s ease-in-out, visibility 0.1s ease-in-out;
}

.cardBody:hover .cardPlayButton {
    bottom: 27px;
    visibility: visible;
}

.cardPlayIcon {
    width: 0;
    height: 0;
    margin: auto;
    margin-left: 40%;
    border-top: 7px solid transparent;
    border-left: 10px solid white;
    border-bottom: 7px solid transparent;
}

.cardArtist {
    border-radius: 50%;
    height: 190px;
    width: 190px;
    object-fit: cover;
    margin: 15px;
    box-shadow: 0px 0px 10px 2px #121212;
}

.cardTitle {
    display: inline-block;
    font-size: 12pt;
    font-family: Verdana, sans-serif;
    color: white;  
    overflow: hidden; 
    text-overflow: ellipsis; 
    white-space: nowrap; 
    width: 190px;
}

.cardSub {
    font-size: 10pt;
    font-family: Verdana, sans-serif; 
    color: grey;
    max-width: 190px;
}

.cardPunc {
    font-size: 10pt;
    font-family: Verdana, sans-serif; 
    color: grey;
}

.cardText {
    height: 60px;
    margin-left: 15px;
    margin-right: 15px;
    margin-bottom: 15px;
    overflow-y: hidden;
}

.cardSubLink {
    font-size: 10pt;
    font-family: Verdana, sans-serif; 
    color: grey;
    max-width: 190px;
}


.cardSubLink:hover {
    text-decoration: underline;
}

.cardBody:hover {
    background: #373737;
}

.loginPage {
    display: flex;
    text-align: center; 
    justify-content: center; 
    align-items: center; 
    height: 100vh;
}

.navBar {
    position: fixed;
    top: 0;
    display: flex;
    height: 50px;
    width: 100vw;
    background: #212121;
    cursor: default;
    margin-bottom: 20px;
    border-bottom: 0.5px solid #373737;
    z-index: 2;
}


.page {
    margin: auto;
    max-width: 1200px; 
    padding-bottom: 90px;
    padding-top: 70px;
}

.playBar {
    position: fixed;
    display: flex;
    height: 90px;
    width: 100vw;
    background: #212121;
    cursor: default;
    bottom: 0;
    border-top: 0.5px solid #373737;
    user-select: none;
}

.volumeIcon {
    position: absolute;
    right: 160px;
    bottom: 30px;
}

#volumeBar {
    height: 5px;
    width: 100px;
    background-color: #373737;
    position: absolute;
    right: 50px;
    bottom: 40px;
    border-radius: 10px;
}

#volume {
    height: 5px;
    background-color: grey;
    border-radius: 10px;
    max-width: 100px;
}

#volumeBar:hover #volume {
    background-color: #1ed760;
}

.playedTime {
    position: absolute;
    font-family: Verdana, sans-serif;
    font-size: 8pt;
    left: 30%;
    bottom: 13px;
    color: grey;
}

.playingTimeTotal {
    position: absolute;
    font-family: Verdana, sans-serif;
    font-size: 8pt;
    left: 68%;
    bottom: 13px;
    color: grey;
}

#playProgressBar {
    height: 5px;
    width: 33.3%;
    background-color: #373737;
    position: absolute;
    left: 33.3%;
    bottom: 15px;
    border-radius: 10px;

}

.playProgress {
    height: 5px;
    background-color: grey;
    border-radius: 10px;
    max-width: 480px;
}

.drag {
    float: right;
    width: 12px;
    height: 12px;
    border-radius: 50%;
    background-color: white;
    visibility: hidden;
    z-index: 2;
    margin-top: -3.5px;
}

#playProgressBar:hover .playProgress {
    background-color: #1ed760;
}

.playingTrack {
    display: flex;
    padding-top: 15px;
    margin-left: 15px;
    width: 320px;
    background-color: #212121;
}

.playingTrackImg {
    height: 60px;
    width: 60px;
}

.playingTrackInfo {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 60px;
    margin-left: 15px;
}

.playingTrackName {
    color: white;
    font-family: Verdana, sans-serif;
    font-size: 10pt;
}

.playingTrackName:hover {
    text-decoration: underline;
}

.playingTrackArtist {
    color: grey;
    font-family: Verdana, sans-serif;
    font-size: 8pt;
}

.playingTrackArtist:hover {
    color: white;
    text-decoration: underline;
}

#playFunctions {
    position: absolute;
    left: 45%;
    width: 200px;
    height: 50px;
    display: flex;
}

.playButton {
    display: flex;
    height: 35px;
    width: 35px;
    border-radius: 50%;
    background: white;
    margin-top: auto;
    margin-left: 17px;
    margin-right: 17px;
}

.playButton:hover {
    transform: scale(1.05)
}

.playButton:hover > .playIcon {
    transform: scale(1.05)
}

.prevBox {
    margin-top: 26px;
    margin-left: 27px;
    border-left: 2px solid grey;
    height: 12px;
}

.prevTrackButton {
    width: 0;
    height: 0;
    border-top: 6px solid transparent;
    border-right: 9px solid grey;
    border-bottom: 6px solid transparent;
    margin-left: -2px;    
}

.prevBox:hover {
    border-left: 2px solid white;
}

.prevBox:hover .prevTrackButton {
    border-right: 9px solid white;
}

.nextBox {
    margin-top: 26px;
    margin-right: 27px;
    height: 12px;
    border-right: 2px solid grey;
}

.nextTrackButton {
    width: 0;
    height: 0;
    border-top: 6px solid transparent;
    border-left: 9px solid grey;
    border-bottom: 6px solid transparent;
    margin-right: -2px;
}

.nextBox:hover {
    border-right: 2px solid white;
}

.nextBox:hover .nextTrackButton {
    border-left: 9px solid white;
}


.playIcon {
    width: 0;
    height: 0;
    border-top: 7px solid transparent;
    border-left: 10px solid #212121;
    border-bottom: 7px solid transparent;
    margin-left: 15px;
    margin-top: 11px;
}

.pauseIcon {
    width: 4px;
    height: 12px;
    border-right: 3.5px solid #212121;
    border-left: 3.5px solid #212121;
    margin: auto;
}

.shuffleIcon {
    margin-top: 25px;
}

.repeatIcon {
    margin-top: 25px;
}

.repeatOne {
    font-size: 5pt;
    font-family: Arial, Helvetica, sans-serif;
}

.playerPunc {
    color: grey;
    font-family: Verdana, sans-serif;
    font-size: 8pt;
}


ul {
    list-style-type: none;
    margin: 0;
    padding-left: 0;
}

li {
    float: left;
}

li span {
    display: block;
    font-family: Verdana, sans-serif;
    color: white;
    text-align: center;
    padding: 16px 16px;
}

li span:hover {
    background-color: #373737;
}

.panelTitle {
    font-size: 16pt;
    font-family: Verdana, sans-serif;
    color: white;
    margin-top: 45px;
    margin-bottom: 25px;
    cursor: default;
}

.panelTitle:hover {
    text-decoration: underline;
}

.searchBar {
    border-radius: 20px;
    height: 45px;
    width: 350px;
    font-family: Verdana, sans-serif;
    padding: 20px;
}

.searchBar:focus {
    outline: none;
}

.trackTable {
    width: 1180px;
    font-family: Verdana, sans-serif;
    cursor: default;
    background: #121212;
    font-size: 11pt;
}

.tableTrackName {
    color: white;
    max-width: 500px;
    overflow: hidden; 
    text-overflow: ellipsis; 
    white-space: nowrap;
    margin-bottom: 0px;
    margin-top: 0px;
}

td {
    padding-top: 10px;
    padding-bottom: 10px;
}

.tableLink {
    font-size: 10pt;
}

.tableLink:hover {
    color: white;
    text-decoration: underline;
}

.tableImage {
    height: 40px; 
    width: 40px; 
    object-fit: cover;
}

.searchTableImage {
    height: 40px; 
    width: 40px;
    margin-left: 10px; 
    object-fit: cover;
}

.trackTableRow:hover .searchTableImage {
    opacity: 0.5;
}

.searchTablePlayIcon {
    width: 0;
    height: 0;
    border-top: 7px solid transparent;
    border-left: 10px solid white;
    border-bottom: 7px solid transparent;
    position: absolute;
    right: 27.5%;
    top: 37.5%;
    visibility: hidden;
}

.trackTableRow:hover .searchTablePlayIcon {
    visibility: visible;
}



.trackTableRow {
    color: grey;
}

.tablePlayIcon {
    width: 0;
    height: 0;
    border-top: 7px solid transparent;
    border-left: 10px solid white;
    border-bottom: 7px solid transparent;
    position: absolute;
    left: 40%;
    top: 40%;
    visibility: hidden;
}

.trackTableRow:hover .tableIndex {
    visibility: hidden;
}


.trackTableRow:hover .tablePlayIcon {
    visibility: visible;
}

.rowFirst {
    position: relative;
    width: 50px;
    font-size: 12pt;
    text-align: center;
    border-top-left-radius: 5px;
    border-bottom-left-radius: 5px;
}

.rowSecond {
    padding-left: 10px;
}

.rowLast {
    width: 50px;
    border-top-right-radius: 5px;
    border-bottom-right-radius: 5px;
}

.trackTableRow:hover {
    color: white;
    background: #212121;
}


.headerPanel {
    display: flex;
    padding-bottom: 25px;
    cursor: default;
}

.headerImage {
    height: 232px;
    width: 232px;
    padding-right: 25px;
    object-fit: cover;
}

.headerType {
    font-family: Verdana, sans-serif;
    color: white; 
    font-size: 12pt;
}

.headerTitle {
    font-family: Verdana, sans-serif;
    font-weight: bold;
    color: white; 
    font-size: 40pt;
    margin-top: 10px;
    margin-bottom: 10px;
}

.headerCreator {
    font-family: Verdana, sans-serif;
    font-weight: bold;
    color: white; 
    font-size: 10pt;
}

.headerCreator:hover {
    text-decoration: underline;
}

.headerSub {
    font-family: Verdana, sans-serif;
    color: grey; 
    font-size: 10pt;
}

.headerInfo {
    float: right;
    text-align: left;
}

